--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "autoprefixer": "^10.4.7",
     "cssnano": "^5.1.8",
     "postcss": "^8.4.13",
+    "postcss-cli": "^10.1.0",
     "tailwindcss": "^3.0.24"
   }
 }
