added projects page

--- a/_data/navlinks.yml
+++ b/_data/navlinks.yml
@@ -3,7 +3,7 @@
 - name: Socials
   link: "socials.html"
 - name: Projekte
-  link: "#"
+  link: "projects.html"
 - name: Referenzen
   link: "#"
 - name: Service
