--- a/_data/navlinks.yml
+++ b/_data/navlinks.yml
@@ -5,6 +5,6 @@
 - name: Projekte
   link: "projects.html"
 - name: Referenzen
-  link: "#"
+  link: "references.html"
 - name: Service
   link: "service.html"
