added links for socials and projects in headings and pictures.

--- a/_data/bottomicons.yml
+++ b/_data/bottomicons.yml
@@ -1,7 +1,7 @@
 Twitch:
   name: Twitch
   logo: "assets/images/social/twitch.png"
-  url: "https://twitch.tv/finessi"
+  url: "https://twitch.tv/finessi_"
 Twitter:
   name: Twitter
   logo: "assets/images/social/twitter.png"
