--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ title: 'Finessi_'
 
 plugins:
   - jekyll-postcss-v2
+  - jekyll-seo-tag
 
 postcss:
   cache: false
@@ -23,3 +24,7 @@ collections:
     sort_by: order
   references:
     sort_by: order
+
+tagline: "Aufklärung zu LGBTQIA+ Themen"
+description: "FiNessi ist on- und offline in Öffentlichkeitsarbeit aktiv. Viel Aufklärungsarbeit zu Geschlecht und Transsein, zu Umwelt- und Klimaschutz. Live auf Twitch, vorproduziert auf YouTube, in Interviews und Dokumentation bei Print und Video."
+locale: de_DE
