add default image for seo-tag

--- a/_config.yml
+++ b/_config.yml
@@ -34,5 +34,7 @@ twitter:
   card: summary
   
 author:
+  twitter: finessi_
   name: Finessi_
   url: https://twitter.com/finessi_
+  picture: jekyll-nessi/assets/images/nessi.webp
