update mastodon for social icons

--- a/_data/bottomicons.yml
+++ b/_data/bottomicons.yml
@@ -25,4 +25,4 @@ Discord:
 Mastodon:
   name: Mastodon
   logo: "assets/images/social/mastodon.svg.webp"
-  url: "https://mastodon.social/@finessi"
+  url: "https://creators.social/@finessi"
